:zap: update pkg name

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@ go.work.sum
 # Editor/IDE
 # .idea/
 # .vscode/
+/.idea/dictionaries/project.xml
+/.idea/.gitignore
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/rgo.iml
+/.idea/vcs.xml
