:green_heart: add ci permissions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,11 @@ on:
         default: false
         type: boolean
 
+# Add permissions for GitHub token
+permissions:
+  contents: write
+  packages: write
+
 jobs:
   build:
     name: Build and Package
@@ -110,15 +115,6 @@ jobs:
           echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "New version: $NEW_VERSION"
           
-      - name: Create new tag (if manual trigger)
-        if: github.event_name == 'workflow_dispatch'
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git tag -a ${{ steps.semver.outputs.new_version }} -m "Release ${{ steps.semver.outputs.new_version }}"
-          git push origin ${{ steps.semver.outputs.new_version }}
-          echo "Created and pushed tag: ${{ steps.semver.outputs.new_version }}"
-
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
